# AED_NHL

./: .pre-commit-config.yaml  README.md  Todo  app.py  extract.py  extract_player.py  extract_player_id.py  extract_team.py  pyproject.toml
.github/workflows/: extract.yml
data/player/: nhl_player_all.csv
data/player_id/: nhl_standings_players_20252026_id.csv
data/teams/: nhl_standings_20212022.csv  nhl_standings_20222023.csv  nhl_standings_20232024.csv  nhl_standings_20242025.csv  nhl_standings_20252026.csv
