[project]
name = "aed-nhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
