[project]
name = "aed-nhl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nhl-api-py>=3.1.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.poetry]
package-mode = false
